Basic login and refresh work

--- a/lib/Gamed/public/lobby.html
+++ b/lib/Gamed/public/lobby.html
@@ -1,6 +1,6 @@
 <h2>Welcome</h2>
 <ul>Available games:
-  <li ng-repeat="g in games"><a href="/create/{{g.name}}">{{g.description}}</a></li>
+  <li ng-repeat="g in games"><a href="/create/{{g}}">{{g}}</a></li>
 </ul>
 
 <ul>Join existing game:
