--- a/lib/Gamed/public/index.html
+++ b/lib/Gamed/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="playtogether">
   <head>
     <title>Play together</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/gamed.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -10,6 +11,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-touch.min.js"></script>
     <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="g/HiLo/controller.js"></script>
   </head>
   <body>
     <div ng-view></div>
