--- a/lib/Gamed/public/lobby.html
+++ b/lib/Gamed/public/lobby.html
@@ -1,10 +1,22 @@
-<h2>Welcome</h2>
-<ul>Available games:
-  <li ng-repeat="g in games"><a href="/create/{{g}}">{{g}}</a></li>
-</ul>
-
-<ul>Join existing game:
-  <li ng-repeat="i in instances">
-    <a href="{{i.url}}">{{i.name}}({{i.game}})</a>
-  </li>
-</ul>
+<div class="page-header">
+  <h1>Welcome</h1>
+</div>
+<div class="well">
+  <h4>Available games:</h4>
+  <div class="btn-group-vertical form-inline">
+    <button ng-repeat="g in games" class="btn btn-success" ng-model="config.game" btn-radio="g" uncheckable>{{g}}</button>
+  </div>
+  </ul>
+  <div class="form-inline">
+    <input ng-model="config.name" class="form-control" placeholder="Game name">
+    <div ng-include="getCreateUrl()"></div>
+    <button type="button" class="btn btn-primary" ng-click="create()">Create Game</button>
+  </div>
+</div>
+<div class="well">
+  <ul>Join existing game:
+    <li ng-repeat="i in instances">
+      <a href="{{i.url}}">{{i.name}}({{i.game}})</a>
+    </li>
+  </ul>
+</div>
