--- a/lib/Gamed/public/g/HiLo/play.html
+++ b/lib/Gamed/public/g/HiLo/play.html
@@ -1,7 +1,10 @@
 <div ng-controller="HiLoCtl">
-  Pick a number: <input type="number" ng-model="guess">
-  <button type="button" class="btn btn-standard" ng-click="pick()">Pick</button>
-</div>
-<div class="well">
-  <alert ng-repeat="g in guesses" type="{{g.type}}">{{g.number}}</alert>
+  <div>
+    Pick a number: <input id="number" type="number" ng-model="guess" ng-keyup="$event.keyCode == 13 ? pick() : null" autofocus>
+    <button type="button" class="btn btn-primary" ng-click="pick()">Pick</button>
+    <button type="button" class="btn btn-standard" ng-click="clear()">Clear</button>
+  </div>
+  <div class="well inline-form">
+    <alert ng-repeat="g in guesses | orderBy:'number'" type="{{g.type}}">{{g.number}}</alert>
+  </div>
 </div>
