--- a/lib/Gamed/public/index.html
+++ b/lib/Gamed/public/index.html
@@ -12,6 +12,7 @@
     <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
     <script src="js/app.js"></script>
     <script src="g/HiLo/controller.js"></script>
+    <script src="g/Rook/controller.js"></script>
   </head>
   <body>
     <div ng-view></div>
