--- a/lib/Gamed/public/g/HiLo/play.html
+++ b/lib/Gamed/public/g/HiLo/play.html
@@ -3,6 +3,7 @@
     Pick a number: <input id="number" type="number" ng-model="guess" ng-keyup="$event.keyCode == 13 ? pick() : null" autofocus>
     <button type="button" class="btn btn-primary" ng-click="pick()">Pick</button>
     <button type="button" class="btn btn-standard" ng-click="clear()">Clear</button>
+    <button type="button" class="btn btn-danger" ng-click="quit()">Quit</button>
   </div>
   <div class="well inline-form">
     <alert ng-repeat="g in guesses | orderBy:'number'" type="{{g.type}}">{{g.number}}</alert>
