--- a/lib/Gamed/public/index.html
+++ b/lib/Gamed/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="playtogether">
-  <head>
+  <head ng-controller="LocCtl">
     <title>Play together</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/gamed.css">
+    <link rel="stylesheet" ng-if="gameStyle()" href="{{gameStyle()}}">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.min.js"></script>
