--- a/lib/Gamed/public/g/Rook/play.html
+++ b/lib/Gamed/public/g/Rook/play.html
@@ -1,4 +1,16 @@
-<div id="table" ng-controller="RookCtl">
+<div ng-controller="RookCtl">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-3" ng-class="{playing: p === public.player || state === 'Bidding' && p === public.bidder}" ng-repeat="p in ['n','e','s','w']">
+        <div style="align:center">{{players[p].name}}</div>
+        <div ng-if="players[p].bid || players[p].pass">
+          <span ng-show="players[p].pass">Pass</span>
+          <span ng-hide="players[p].pass">{{players[p].bid}}</span>
+        </div>
+        <div ng-class="{lead: p === last.leader, winner: p === last.winner}" class="suit_{{last[p].suit()}}">{{last[p].str}}</div>
+      </div>
+    </div>
+  </div>
   <div id="waiting-tab" ng-show="state === 'WaitingForPlayers'">
     Waiting for players to join...<br>
     <button type="button" class="btn btn-danger" ng-click="start()">Start with current players</button>
@@ -38,15 +50,8 @@
   <div ng-show="state === 'PlayTricks'">
     <div class="nest">
       Trump is <span class="suit_{{public.trump}}">{{color[public.trump]}}</span><br>
-      <div class="card suit_{{c.suit()}}" ng-repeat="c in public.trick.cards">
-        <span>{{c.str}}</span>
-      </div>
-      <div class="card suit_{{c.suit()}}" ng-repeat="c in range(4 - public.trick.cards.length) track by $index"></div>
-    </div>
-    <div class="nest">
-      Last trick winner: {{winner}}<br>
-      <div class="card suit_{{c.suit()}}" ng-repeat="c in lasttrick.cards">
-        <span>{{c.str}}</span>
+      <div class="card suit_{{public.trick[p].suit()}}" ng-repeat="p in ['n', 'e', 's', 'w']">
+        <span>{{public.trick[p].str}}</span>
       </div>
     </div>
     <br clear="all">
