--- a/lib/Gamed/public/g/Rook/play.html
+++ b/lib/Gamed/public/g/Rook/play.html
@@ -1,14 +1,22 @@
 <div ng-controller="RookCtl">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-3" ng-class="{playing: p === public.player || state === 'Bidding' && p === public.bidder}" ng-repeat="p in ['n','e','s','w']">
-        <div style="align:center">{{players[p].name}}</div>
-        <div ng-if="players[p].bid || players[p].pass">
+      <div class="col-xs-3 player" ng-class="{playing: p === public.player || state === 'Bidding' && p === public.bidder}" ng-repeat="p in ['n','e','s','w']">
+        <div style="align:center">{{players[p].name}}
           <span ng-show="players[p].pass">Pass</span>
           <span ng-hide="players[p].pass">{{players[p].bid}}</span>
         </div>
-        <div ng-class="{lead: p === last.leader, winner: p === last.winner}" class="suit_{{last[p].suit()}}">{{last[p].str}}</div>
+        <div ng-class="{lead_card: p === last.leader, winner: p === last.winner}" class="shadow suit_{{last[p].suit()}}">{{last[p].str}}</div>
+        <div ng-show="public.trick[p]" class="card suit_{{public.trick[p].suit()}}">
+          <span>{{public.trick[p].str}}</span>
+        </div>
       </div>
+    </div>
+  </div>
+  <div class="container" ng-hide="state === 'WaitingForPlayers'">
+    <div class="row">
+      <div class="col-xs-2 col-xs-offset-4" ng-class="{shadow: 'ns'.indexOf(public.bidder) != -1}">{{players.n.name}}/{{players.s.name}}: {{public.points[0]}}</div>
+      <div class="col-xs-2" ng-class="{shadow: 'ew'.indexOf(public.bidder) != -1}">{{players.e.name}}/{{players.w.name}}: {{public.points[1]}}</div>
     </div>
   </div>
   <div id="waiting-tab" ng-show="state === 'WaitingForPlayers'">
@@ -19,16 +27,20 @@
     <button type="button" class="btn btn-primary" ng-click="deal()">Deal</button>
   </div>
   <div ng-show="state === 'Dealing' && public.dealer!=id">
-    <span>Waiting for {{players[dealer].name}} to deal...</span>
+    <span>Waiting for {{players[public.dealer].name}} to deal...</span>
   </div>
-  <div ng-show="state === 'Bidding' && public.bidder==id">
-    <label size="5" for="bid-spinner">Bid:</label>
-    <input ng-model="bid.bid" min="bid_min" max="bid_max" ng-pattern="/\d+[05]/">
-    <button type="button" class="btn btn-primary" ng-click="makeBid()">Bid</button>
-    <button type="button" class="btn btn-danger" ng-click="pass()">Pass</button>
+  <div ng-show="state === 'Bidding' && public.bidder==id" class="container">
+    <div class="row">
+      <div class="col-xs-4 col-xs-offset-4">
+        <label size="5" for="bid-spinner">Bid:</label>
+        <input ng-model="bid.bid" min="bid_min" max="bid_max" ng-pattern="/\d+[05]/">
+        <button type="button" class="btn btn-primary" ng-click="makeBid()">Bid</button>
+        <button type="button" class="btn btn-danger" ng-click="pass()">Pass</button>
+      </div>
+    </div>
   </div>
   <div ng-show="state === 'Bidding' && public.bidder!=id">
-    <span>Waiting for {{players[bidder].name}} to bid...</span>
+    <span>Waiting for {{players[public.bidder].name}} to bid...</span>
   </div>
   <div ng-show="state === 'Declaring' && public.bidder == id">
     <div class="btn-group btn-group-vertical" style="float: left; margin-top: 3em">
@@ -47,17 +59,13 @@
     <br clear="all">
     <br clear="all">
   </div>
-  <div ng-show="state === 'PlayTricks'">
-    <div class="nest">
-      Trump is <span class="suit_{{public.trump}}">{{color[public.trump]}}</span><br>
-      <div class="card suit_{{public.trick[p].suit()}}" ng-repeat="p in ['n', 'e', 's', 'w']">
-        <span>{{public.trick[p].str}}</span>
-      </div>
-    </div>
-    <br clear="all">
-    <br clear="all">
+  <div ng-show="state === 'GameOver'">
+    <span>Game Over!</span>
   </div>
-  <div id="hand">
+  <br clear="all">
+  <br clear="all">
+  <div id="hand" class="center-block">
+    <span ng-show="public.trump">Trump is <span class="shadow suit_{{public.trump}}">{{color[public.trump]}}</span><br></span>
     <div class="card suit_{{c.suit()}}" ng-repeat="c in private.cards.cards" ng-click="clicked()">
       <span>{{c.str}}</span>
     </div>
