--- a/lib/Gamed/public/g/Rook/play.html
+++ b/lib/Gamed/public/g/Rook/play.html
@@ -1,7 +1,7 @@
-<div ng-controller="RookCtl">
+<div class="table" ng-controller="RookCtl">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-3 player" ng-class="{playing: p === public.player || state === 'Bidding' && p === public.bidder}" ng-repeat="p in ['n','e','s','w']">
+      <div class="col-xs-3 player well" ng-class="{active: p === public.player || state === 'Bidding' && p === public.bidder}" ng-repeat="p in ['n','e','s','w']">
         <div style="align:center">{{players[p].name}}
           <span ng-show="players[p].pass">Pass</span>
           <span ng-hide="players[p].pass">{{players[p].bid}}</span>
@@ -29,6 +29,9 @@
   <div ng-show="state === 'Dealing' && public.dealer!=id">
     <span>Waiting for {{players[public.dealer].name}} to deal...</span>
   </div>
+  <div ng-show="state === 'Bidding' && public.bidder!=id">
+    <span>Waiting for {{players[public.bidder].name}} to bid...</span>
+  </div>
   <div ng-show="state === 'Bidding' && public.bidder==id" class="container">
     <div class="row">
       <div class="col-xs-4 col-xs-offset-4">
@@ -39,8 +42,8 @@
       </div>
     </div>
   </div>
-  <div ng-show="state === 'Bidding' && public.bidder!=id">
-    <span>Waiting for {{players[public.bidder].name}} to bid...</span>
+  <div ng-show="state === 'Declaring' && public.player!=id">
+    <span>Waiting for {{players[public.bidder].name}} to declare...</span>
   </div>
   <div ng-show="state === 'Declaring' && public.bidder == id">
     <div class="btn-group btn-group-vertical" style="float: left; margin-top: 3em">
@@ -66,7 +69,7 @@
   <br clear="all">
   <div id="hand">
     <span ng-show="public.trump">Trump is <span class="shadow suit_{{public.trump}}">{{color[public.trump]}}</span><br></span>
-    <div class="card suit_{{c.suit()}}" ng-repeat="c in private.cards.cards" ng-click="clicked()">
+    <div class="card suit_{{c.suit()}}" ng-repeat="c in private.cards.cards" ng-class="{inactive: !c.playable()}" ng-click="clicked()">
       <span>{{c.str}}</span>
     </div>
   </div>
