Start of SpeedRisk ui, various lobby fixes

--- a/lib/Gamed/public/g/SpeedRisk/play.html
+++ b/lib/Gamed/public/g/SpeedRisk/play.html
@@ -1,2 +1,6 @@
 <div ng-controller="SpeedRiskCtl">
+  <canvas></canvas>
+  <div class="footer" style="right: 0">
+    <button type="button" class="btn btn-normal" ng-click="quit()">Quit</button>
+  </div>
 </div>
