--- a/lib/Gamed/public/index.html
+++ b/lib/Gamed/public/index.html
@@ -13,9 +13,11 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-touch.min.js"></script>
     <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/pixi.js"></script>
     <script src="g/HiLo/controller.js"></script>
     <script src="g/Rook/controller.js"></script>
     <script src="g/Spitzer/controller.js"></script>
+    <script src="g/SpeedRisk/controller.js"></script>
   </head>
   <body>
     <div ng-view></div>
