--- a/lib/Gamed/public/lobby.html
+++ b/lib/Gamed/public/lobby.html
@@ -1,15 +1,21 @@
 <div class="page-header">
   <h1>Welcome</h1>
 </div>
-<div class="well">
-  <h4>Available games:</h4>
-  <div class="btn-group-vertical form-inline">
-    <button ng-repeat="g in games" class="btn btn-success" ng-model="config.game" btn-radio="g" uncheckable>{{g}}</button>
-  </div>
-  <div class="form-inline">
-    <input ng-model="config.name" class="form-control" placeholder="Game name">
-    <div ng-include="getCreateUrl()"></div>
-    <button type="button" class="btn btn-primary" ng-click="create()">Create Game</button>
+<div class="well container-fluid">
+  <div class="row">
+    <div class="col-md-2">
+      <h4>Available games:</h4>
+      <div class="btn-group-vertical form-inline">
+        <button ng-repeat="g in games" class="btn btn-success" ng-model="config.game" btn-radio="g" uncheckable>{{g}}</button>
+      </div>
+    </div>
+    <form name="create" class="col-md-10" ng-show="config.game">
+      <div class="form-inline">
+        <input ng-model="config.name" name="name" class="form-control" required ng-class="{'has-error': create.name.$invalid}" placeholder="Game name">
+        <button type="button" class="btn btn-primary" ng-click="create()">Create Game</button>
+        <div ng-include="getCreateUrl()"></div>
+      </div>
+    </form>
   </div>
 </div>
 <div class="well">
