--- a/lib/Gamed/public/index.html
+++ b/lib/Gamed/public/index.html
@@ -18,6 +18,7 @@
     <script src="g/Rook/controller.js"></script>
     <script src="g/Spitzer/controller.js"></script>
     <script src="g/SpeedRisk/controller.js"></script>
+    <script src="g/RoboRally/controller.js"></script>
   </head>
   <body>
     <div ng-view></div>
