Some progress on showing bots after ready

--- a/lib/Gamed/public/g/RoboRally/create.html
+++ b/lib/Gamed/public/g/RoboRally/create.html
@@ -1,6 +1,6 @@
 <table>
   <tr>
-    <td><button class="btn btn-success" ng-model="config.course" btn-radio="'checkmate'" ng-init="config.board='Classic'">Checkmate</button></td>
+    <td><button class="btn btn-success" ng-model="config.course" btn-radio="'checkmate'" ng-init="config.course='checkmate'">Checkmate</button></td>
     <td>&nbsp;5 - 8 Players</td>
   </tr>
   <tr>
