--- a/lib/Gamed/public/g/RoboRally/create.html
+++ b/lib/Gamed/public/g/RoboRally/create.html
@@ -7,4 +7,8 @@
     <td><button class="btn btn-success" ng-model="config.course" btn-radio="'risky_exchange'">Risky Exchange</button></td>
     <td>&nbsp;2 - 8 Players</td>
   </tr>
+  <tr>
+    <td><button class="btn btn-success" ng-model="config.course" btn-radio="'dizzy_dash'">Dizzy Dash</button></td>
+    <td>&nbsp;2 - 8 Players</td>
+  </tr>
 </table>
